# libconeangle

./: .coverage  .flake8  .fortls  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE_bundled.txt  MANIFEST  README.md  fpm.toml  noxfile.py  pages.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  draft-pdf.yml  fortran.yml  python.yml  test.yml
app/: demo.f90
include/: cone_angle.h
libconeangle/: __init__.py  coneangle.py  lib.py  typing.py
paper/: paper.bib  paper.md
src/: CMakeLists.txt  api.f90  cones.f90  data.f90  env.f90  main.f90  util.f90
test/: __init__.py  integration.f90  main.f90  test_libconangle.py  test_libconeangle.py
